45
================

04/05/21 Support reports and templates in undelete
03/05/21 Flag not present report builder criteria
27/04/21 Test reschedule date (Matt Bickel)
27/04/21 json_mail and json_report service methods (Jacob Sabella)
27/04/21 Fix issue with leading spaces in found.org folder names
26/04/21 Hide payment section on move_* screens if no add payment perm
23/04/21 Allow creation of reservations from bulk screen
23/04/21 Fosterer (space available) shelter view mode #999
23/04/21 Hide report categories user does not have permissions for
21/04/21 Fix to update current owner on return/re-adoption
16/04/21 Fix for merge dups bug resetting date of birth
15/04/21 ANIMALTRANSFER CSV import field
15/04/21 Allow updating units from bulk change animals #994
14/04/21 Unit/Unit and Species shelter view options
10/04/21 Escape double quotes when exporting animals as CSV
10/04/21 Map "reason" to "reasonforentry" for animals from online form
09/04/21 Allow updating of rabies tag from give vaccination dialog
09/04/21 Hide previous errors when executing queries at SQL Interface
09/04/21 Hide driver info on transport for no "View Owner" permission

44
================

06/04/21 Popup warning field for animals #970
06/04/21 Use created date as default sort for media icon view
04/04/21 Support autocomplete/autofill in online forms #991
03/04/21 Stop line breaks in online form recipients breaking headers
01/04/21 Stop diary notifications using inaccurate substring match #989
01/04/21 Prevent invalid dates stopping additional fields being written
30/03/21 Audit changes to additional fields #988 
30/03/21 Audit changes made by clone_from_template #988
29/03/21 Failure to create trx should not stop receiving payments
25/03/21 Fix bug that set current owner to original on deceased animals
25/03/21 Use best practice cookie-based "remember me" #982
24/03/21 Permit inserts via sql interface to sensitive tables/columns
24/03/21 Configurable PDF zoom level via CSS